# kimina-lean-server

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README-client.md  README.md  benchmark.py  compare_version.py  compose-dev.yaml  compose-prod.yaml  compose.yaml  dev-requirements.txt  example.py  loadDynlib.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py  setup.sh
.github/workflows/: cd-client.yaml  cd-server.yaml  cd.yaml  ci.yaml
app/: __main__.py  auth.py  db.py  main.py  models.py  repl.py  schemas.py  settings.py  split.py
app/routers/: check.py
client/: client.py
client/kimina/: __init__.py  async_client.py  base.py  client.py  client_old.py  data_utils.py  models.py  proof_utils.py  sync_client.py  utils.py
client/kimina_client/: infotree.py  models.py  sync_client.py  utils.py
client/lean_verification_client/: __init__.py  async_client.py  base.py  models.py  sync_client.py  utils.py
demo/: demo.ipynb  demo_extraction.lean  demo_search_1.lean  demo_search_2.lean  demo_search_3.lean
docs/: README.md
examples/: batch_verify.py  demo.ipynb
kimina_lean_server/client/: __init__.py  client.py  infotree.py
kimina_lean_server/server/: __init__.py  server.py
prisma/: schema.prisma
server/: .env.template  Dockerfile  README.md  __main__.py  auth.py  benchmark.py  compose.yaml  config.py  db.py  healthcheck.py  leanrepl.py  logger.py  main.py  manager.py  models.py  prisma_client.py  pyproject.toml  pyrightconfig.json  repl.py  server.py  settings.py  setup.py  setup.sh  split.py
server/app/: __init__.py  __main__.py  manager.py  repl.py  settings.py
server/app/routers/: backward.py  health.py
server/routers/: backward.py  check.py  health.py
server/server_old/: server.py
server/tests/: conftest.py  test_api.py  test_manager.py
server/tests/match/: test_match.py
server/tests/perfs/: test_perfs.py
server_old/: server.py
tests/: conftest.py  test_api.py  test_header_offset.py  test_infotree_processing.py  test_manager.py  test_repl.py  test_split.py  utils.py
tests/client/: conftest.py
tests/match/: test_match.py
tests/match/input/: goedel-lean_workbook_10009.lean  goedel-lean_workbook_1001.lean  goedel-lean_workbook_10012.lean  goedel-lean_workbook_10013.lean  goedel-lean_workbook_10014.lean  goedel-lean_workbook_1002.lean  goedel-lean_workbook_10026.lean  goedel-lean_workbook_1003.lean  goedel-lean_workbook_10036.lean  goedel-lean_workbook_10039.lean  goedel-lean_workbook_10041.lean  goedel-lean_workbook_10053.lean  goedel-lean_workbook_10057.lean  goedel-lean_workbook_10058.lean  goedel-lean_workbook_10064.lean  goedel-lean_workbook_10065.lean  goedel-lean_workbook_10074.lean  goedel-lean_workbook_10075.lean  goedel-lean_workbook_1008.lean  goedel-lean_workbook_10081.lean  goedel-lean_workbook_10082.lean  goedel-lean_workbook_10083.lean  goedel-lean_workbook_10087.lean  goedel-lean_workbook_10090.lean  goedel-lean_workbook_10096.lean  goedel-lean_workbook_10097.lean  goedel-lean_workbook_101.lean  goedel-lean_workbook_10113.lean  goedel-lean_workbook_10116.lean  goedel-lean_workbook_10135.lean  goedel-lean_workbook_10144.lean  goedel-lean_workbook_10145.lean  goedel-lean_workbook_10147.lean  goedel-lean_workbook_1016.lean  goedel-lean_workbook_10166.lean  goedel-lean_workbook_10168.lean  goedel-lean_workbook_10170.lean  goedel-lean_workbook_10172.lean  goedel-lean_workbook_10178.lean  goedel-lean_workbook_1018.lean  (+43 more)
tests/perfs/: test_perfs.py
tests/server/: conftest.py  test_api.py  test_repl_memory_limit.py
tests/server/output/: proof2.json
tests/utils/: test_splitter.py
tsts_old/: test_api.py
tsts_old/server/: test_api.py
tsts_old/utils/: test_splitter.py
utils/: gcp_logging.py  gcp_monitoring.py  proof_utils.py  repl_cache.py
webapp/: README.md  next-env.d.ts  package.json  tsconfig.json
webapp/app/: layout.tsx  page.tsx
(+121 files in other folders)
